--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
                 </svg>
             </button>
             <div class="mobile-menu" data-menu>
-                <button class="mobile-button" type="button">Buy now
+                <button class="mobile-button js-open-modal" data-modal="2" type="button">Buy now
                     <svg class="header__svg">
                         <use href="/images/icons.svg#icon-white-button"></use>
                     </svg>
@@ -32,7 +32,7 @@
                     <li class="mobile__item"><a class="mobile__links" href="">Contact</a></li>
                 </ul>
             </div>
-            <button class="header__button" type="button">Buy now
+            <button class="header__button js-open-modal" data-modal="2" type="button">Buy now
                 <svg class="header__svg">
                     <use href="/images/icons.svg#icon-white-button"></use>
                 </svg>
